--- a/package.json
+++ b/package.json
@@ -13,6 +13,18 @@
     "lint:fix": "ng lint --fix",
     "prettier": "npx prettier --write ."
   },
+  "lint-staged": {
+    "src/**/*.{js,ts,scss,md,html,json}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "ng lint:fix && lint-staged",
+      "pre-push": "ng test"
+    }
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
@@ -45,12 +57,14 @@
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
     "typescript": "~5.1.3"
