--- a/package.json
+++ b/package.json
@@ -13,15 +13,9 @@
     "lint:fix": "ng lint --fix",
     "prettier": "npx prettier --write ."
   },
-  "lint-staged": {
-    "src/**/*.{js,ts,scss,md,html,json}": [
-      "npm run lint:fix",
-      "git add"
-    ]
-  },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "npm run lint:fix",
       "pre-push": "ng test"
     }
   },
