feat(api): add prisma and postgres

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start:frontend": "cd projects/movies-frontend && npm run start",
     "start:server": "cd projects/api && npm run start",
-    "start": "concurrently --prefix \"{name}\" --prefix-colors \"blue,green\" \"npm run start:frontend\" \"npm run start:server\""
+    "start:db": "docker-compose up",
+    "start": "concurrently --prefix \"{name}\" --prefix-colors \"blue,green\" \"npm run start:db\" \"npm run start:frontend\" \"npm run start:server\"",
+    "stop": "docker-compose down"
   },
   "keywords": [],
   "author": "",
