--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-.angular/cache
+projects/movies-frontend/.angular
 .sass-cache/
 /connect.lock
 coverage
