--- a/projects/movies-frontend/package.json
+++ b/projects/movies-frontend/package.json
@@ -40,6 +40,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.47.0",
