refactor(uploads): remove uploads from git

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start:frontend": "cd projects/movies-frontend && npm run start",
     "start:server": "cd projects/api && npm run start:dev",
-    "start:db": "docker-compose up",
-    "start": "concurrently --prefix \"{name}\" --prefix-colors \"blue,green\" \"npm run start:db\" \"npm run start:frontend\" \"npm run start:server\"",
+    "start": "concurrently --prefix \"{name}\" --prefix-colors \"blue,green\" \"npm run start:frontend\" \"npm run start:server\"",
     "stop": "docker-compose down",
     "seed": "ts-node projects/api/prisma/seed.ts"
   },
