--- a/projects/movies-frontend/package.json
+++ b/projects/movies-frontend/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -55,8 +56,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^14.0.1",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
+    "tailwindcss": "^3.3.5",
     "typescript": "~5.1.3"
   }
 }
