--- a/projects/movies-frontend/package.json
+++ b/projects/movies-frontend/package.json
@@ -48,6 +48,7 @@
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "hex-rgb": "^5.0.0",
     "husky": "^8.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
