feat(ui-components): add form-field component

--- a/projects/movies-frontend/angular.json
+++ b/projects/movies-frontend/angular.json
@@ -9,7 +9,8 @@
         "@schematics/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush",
-          "standalone": true
+          "standalone": true,
+          "inlineStyle": true
         }
       },
       "root": "",
