--- a/projects/movies-frontend/package.json
+++ b/projects/movies-frontend/package.json
@@ -57,6 +57,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^14.0.1",
+    "ng-packagr": "^16.2.3",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
