--- a/projects/movies-frontend/tsconfig.json
+++ b/projects/movies-frontend/tsconfig.json
@@ -22,7 +22,12 @@
     "lib": ["ES2022", "dom"],
     "paths": {
       "@shared/*": ["src/app/shared/*"],
-      "@core/*": ["src/app/core/*"]
+      "@core/*": [
+        "src/app/core/*"
+      ],
+      "ui-components": [
+        "dist/ui-components"
+      ]
     }
   },
   "angularCompilerOptions": {
